260906 - 기사 배송 배정 확인 및 이슈 처리 구현